@@ -154,6 +154,11 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.coner.trailer.cli.ConerTrailerCli</mainClass>
+                                    <!-- Workaround https://github.com/square/retrofit/issues/3341 -->
+                                    <!-- Affects JVM 11 only -->
+                                    <manifestEntries>
+                                        <Add-Opens>java.base/java.lang.invoke</Add-Opens>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                         </configuration>
